Remember new default settings for RDP color depth and keyboard layout.

BUG: 123772

svn path=/branches/KDE/3.5/kdenetwork/krdc/; revision=563911